--- a/application/templates/project/collaborate.html
+++ b/application/templates/project/collaborate.html
@@ -17,10 +17,10 @@
 		This is the combined data from all participants of this project:
 	</p>
 	<ul>
-		{% for campaignlayer in campaignlayers %}
+		{% for campaignlayer in campaignlayers.values() %}
 			<li>
-				<strong><a href="{{url_for('campaign_data', slug=project.slug, safe_name=campaignlayer)}}">{{campaignlayer}}</a></strong>
-				<code>{{url_for('campaign_data', slug=project.slug, safe_name=campaignlayer, _external=true)}}</code>
+				<strong><a href="{{url_for('campaign_data', slug=project.slug, safe_name=campaignlayer.safe_name)}}">{{campaignlayer.name}}</a></strong>
+				<code>{{url_for('campaign_data', slug=project.slug, safe_name=campaignlayer.safe_name, _external=true)}}</code>
 			</li>
 		{% endfor %}
 	</ul>
